samples/_failures_safe/1761283636_6790f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_232a1b22.c: In function ‘main’:
./samples/SAFE/__tmp_232a1b22.c:154:21: error: ‘matrix’ undeclared (first use in this function); did you mean ‘Matrix’?
  154 |                 if (matrix
      |                     ^~~~~~
      |                     Matrix
./samples/SAFE/__tmp_232a1b22.c:154:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_232a1b22.c:154:27: error: expected ‘)’ at end of input
  154 |                 if (matrix
      |                    ~      ^
      |                           )
./samples/SAFE/__tmp_232a1b22.c:154:17: error: expected declaration or statement at end of input
  154 |                 if (matrix
      |                 ^~
./samples/SAFE/__tmp_232a1b22.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_232a1b22.c:154:17: error: expected declaration or statement at end of input
